feat: unModifiedList로 인해 list.add가 안되는 문제 해결  (#283)